# WEB_HW_14

./: .env.example  .gitignore  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/versions/: 8fbdb8ca9d98_add_table_users.py  e2e03bcdd708_add_verification_for_user.py
src/config/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routres/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
src/services/templates/: verify_email.html
src/templates/: index.html
tests/: conftest.py  test_e2e_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
